# rules_jest

./: package.json  pnpm-lock.yaml
example/simple/: BUILD.bazel  index.test.ts  index.ts  jest.config.js
